--- a/app/src/main/res/layout/mainframe_layout.xml
+++ b/app/src/main/res/layout/mainframe_layout.xml
@@ -12,6 +12,13 @@
 
     <WebView
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/subfloorWebView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"/>
+
+    <WebView
+        android:layout_width="match_parent"
         android:layout_height="80dip"
         android:id="@+id/crawlerWebView"
         android:layout_alignParentTop="true"
