--- a/app/src/main/res/layout/mainframe_layout_demo.xml
+++ b/app/src/main/res/layout/mainframe_layout_demo.xml
@@ -2,20 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/Black"
     android:id="@+id/mainframeLayout">
 
-    <SurfaceView
+    <VideoView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/surfaceView"
+        android:id="@+id/videoView"
         android:layout_centerHorizontal="true" />
-
-    <WebView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/subfloorWebView"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"/>
 
     <WebView
         android:layout_width="match_parent"
@@ -75,17 +69,18 @@
         android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/widgetWebView" />
 
-
+    <!--
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="200dip"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
+        android:visibility="gone"
         android:id="@+id/appTray">
 
-
     </LinearLayout>
+    -->
 
 
 </RelativeLayout>
