--- a/app/src/main/res/layout/mainframe_layout.xml
+++ b/app/src/main/res/layout/mainframe_layout.xml
@@ -10,53 +10,48 @@
         android:id="@+id/surfaceView"
         android:layout_centerHorizontal="true" />
 
-    <WebView
+    <!--<WebView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/subfloorWebView"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentStart="true"
+        android:visibility="invisible"/>-->
 
     <WebView
         android:layout_width="match_parent"
-        android:layout_height="80dip"
+        android:layout_height="60dip"
         android:id="@+id/crawlerWebView"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentStart="true"
+        android:focusable="false"/>
 
     <WebView
         android:layout_width="200dip"
-        android:layout_height="400dip"
+        android:layout_height="300dip"
         android:id="@+id/widgetWebView"
         android:layout_marginTop="100dip"
         android:layout_marginBottom="100dip"
         android:layout_marginRight="20dip"
         android:layout_marginLeft="20dip"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        />
-
-    <ProgressBar
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/progressBar"
-        android:layout_centerVertical="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="58dp" />
+        android:focusable="false"
+        android:layout_alignParentLeft="true" />
 
     <TextView
-        android:layout_width="800dp"
+        android:layout_width="400dip"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="MESSAGES"
         android:id="@+id/textViewMsg"
-        android:textSize="30px"
+        android:textSize="20sp"
         android:gravity="center"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="200dp"
-        android:background="@color/BlueViolet" />
+        android:layout_marginBottom="100dip"
+        android:background="@drawable/popup_bkg"
+        android:focusable="false"
+        android:padding="15dip" />
 
     <ImageView
         android:layout_width="300dip"
@@ -78,10 +73,12 @@
 
     <LinearLayout
         android:orientation="horizontal"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="200dip"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
+        android:background="@color/BlackAlpha70"
+        android:padding="10dip"
         android:id="@+id/appTray">
 
 
