--- a/app/src/main/res/layout/mainframe_layout_old.xml
+++ b/app/src/main/res/layout/mainframe_layout_old.xml
@@ -1,56 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- this is the version used in the DEMO release, kept around for reference. -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/Black"
     android:id="@+id/mainframeLayout">
 
-    <VideoView
+    <SurfaceView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/videoView"
+        android:id="@+id/surfaceView"
         android:layout_centerHorizontal="true" />
+
+    <!--<WebView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/subfloorWebView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:visibility="invisible"/>-->
 
     <WebView
         android:layout_width="match_parent"
-        android:layout_height="80dip"
+        android:layout_height="60dip"
         android:id="@+id/crawlerWebView"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentStart="true"
+        android:focusable="false"/>
 
     <WebView
-        android:layout_width="200dip"
-        android:layout_height="400dip"
+        android:layout_width="300dip"
+        android:layout_height="300dip"
         android:id="@+id/widgetWebView"
         android:layout_marginTop="100dip"
         android:layout_marginBottom="100dip"
         android:layout_marginRight="20dip"
         android:layout_marginLeft="20dip"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        />
-
-    <ProgressBar
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/progressBar"
-        android:layout_centerVertical="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="58dp" />
+        android:focusable="false"
+        android:layout_alignParentLeft="true" />
 
     <TextView
-        android:layout_width="800dp"
+        android:layout_width="400dip"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="MESSAGES"
         android:id="@+id/textViewMsg"
-        android:textSize="30px"
+        android:textSize="20sp"
         android:gravity="center"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="200dp"
-        android:background="@color/BlueViolet" />
+        android:layout_marginBottom="100dip"
+        android:background="@drawable/popup_bkg"
+        android:focusable="false"
+        android:padding="15dip" />
 
     <ImageView
         android:layout_width="300dip"
@@ -69,18 +71,19 @@
         android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/widgetWebView" />
 
-    <!--
+
     <LinearLayout
         android:orientation="horizontal"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="200dip"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:visibility="gone"
+        android:background="@color/BlackAlpha70"
+        android:padding="10dip"
         android:id="@+id/appTray">
 
+
     </LinearLayout>
-    -->
 
 
 </RelativeLayout>
