Pre merge commit

--- a/app/src/main/res/layout/mainframe_layout.xml
+++ b/app/src/main/res/layout/mainframe_layout.xml
@@ -51,7 +51,8 @@
         android:layout_marginBottom="100dip"
         android:background="@drawable/popup_bkg"
         android:focusable="false"
-        android:padding="15dip" />
+        android:padding="15dip"
+        android:textColor="#ffffff" />
 
     <TextView
         android:layout_width="400dip"
