--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,15 @@
         <item name="colorAccent">@color/Palette3</item>
     </style>
 
+    <style name="Animation" />
+
+    <style
+        name="Animation.slideInFromLeftAnimation"
+        parent="android:style/Animation.Activity">
+        <item name="android:activityOpenEnterAnimation">@anim/slideinleft_enter</item>
+        <item name="android:activityOpenExitAnimation">@anim/hold</item>
+        <item name="android:activityCloseEnterAnimation">@anim/hold</item>
+        <item name="android:activityCloseExitAnimation">@anim/slideinleft_exit</item>
+    </style>
 </resources>
+
