--- a/app/src/main/res/anim/slideinleft_enter.xml
+++ b/app/src/main/res/anim/slideinleft_enter.xml
@@ -1,4 +1,4 @@
-<translate xmlns:android="http://schemas.android.com/apk/res/android"
-    android:duration="700"
-    android:fromXDelta="-300"
-    android:toXDelta="0%" />
+<alpha xmlns:android="http://schemas.android.com/apk/res/android"
+    android:duration="400"
+    android:fromAlpha="0.0"
+    android:toAlpha="1.0"/>
