--- a/app/src/main/res/anim/slideinleft_exit.xml
+++ b/app/src/main/res/anim/slideinleft_exit.xml
@@ -1,4 +1,4 @@
-<translate xmlns:android="http://schemas.android.com/apk/res/android"
-    android:duration="700"
-    android:fromXDelta="0%"
-    android:toXDelta="-300" />
+<alpha xmlns:android="http://schemas.android.com/apk/res/android"
+    android:duration="500"
+    android:fromAlpha="1.0"
+    android:toAlpha="0.0" />
