--- a/app/src/main/res/layout/dtv_list_elem_layout.xml
+++ b/app/src/main/res/layout/dtv_list_elem_layout.xml
@@ -4,26 +4,71 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/dtv_list_elem_friendlyName"
-        android:textColor="@color/DodgerBlue"
-        android:textAlignment="center"
-        android:textSize="20dip"/>
+        android:background="@drawable/lightweight_listview_selector"
+        android:paddingLeft="30dip"
+        android:paddingRight="30dip"
+        android:paddingTop="15dip"
+        android:paddingBottom="15dip"
+        >
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/dtv_list_elem_curPlaying"
-        android:textSize="20dip"
-        android:layout_marginLeft="25dip"/>
+        <!-- numbers -->
+        <TextView
+            android:layout_width="85dip"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical|left"
+            android:id="@+id/dtv_list_elem_idx_num"
+            android:text="01"
+            android:textSize="50dip"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:paddingRight="15dip"
+            android:textColor="@color/White"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/dtv_list_elem_ipAddr"
-        android:textSize="20dip"
-        android:layout_marginLeft="25dip"/>
+        <!-- divider -->
+        <View
+            android:layout_width="1dip"
+            android:layout_height="match_parent"
+            android:paddingTop="3dip"
+            android:paddingBottom="3dip"
+            android:background="@color/White"
+            android:id="@+id/divider"/>
+
+        <!-- box info -->
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="15dip">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/dtv_list_elem_friendlyName"
+                android:textColor="@color/White"
+                android:textSize="20dip"
+                android:text="Bar Center"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/dtv_list_elem_curPlaying"
+                android:textColor="@color/White"
+                android:textSize="20dip"
+                android:text="CH.206 - ESPN"
+                android:layout_below="@id/dtv_list_elem_friendlyName"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/dtv_list_elem_ipAddr"
+                android:textColor="@color/White"
+                android:textSize="20dip"
+                android:text="192.168.2.1"
+                android:layout_below="@id/dtv_list_elem_curPlaying"/>
+        </RelativeLayout>
+    </LinearLayout>
+
+
 
 </LinearLayout>
